<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="8dp"
    android:layout_marginBottom="12dp"
    android:layout_marginTop="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sosName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_name"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sosNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency_number"
                android:textSize="16sp"
                android:textColor="#333333"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/sos_call_24"
            android:contentDescription="@string/call_icon"
            card_view:tint="#0066CC" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
